# tree-sitter-phits

./: CLAUDE.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  commands.sh  example  go.mod  grammar.js  package.json  phits.el  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-phits.pc.in
bindings/c/tree_sitter/: tree-sitter-phits.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_phits/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPhitsTests/: TreeSitterPhitsTests.swift
src/: grammar.json  node-types.json  parser.c
test/: RMSemittance.debug  RMSemittance.inp  RMSemittance.out  dchain_acryllic.inp  female.inp  gd450_phits_geometry.inp  kirams_ngem2.inp  kirams_pd_fix.inp  phits.debug  phits.inp  phits.out  source_section.debug  source_section.inp  source_section.out  test.debug  test.inp  test.out
